--- a/src/index.jade
+++ b/src/index.jade
@@ -4,14 +4,50 @@ html(lang="ja")
     title なんか
     meta(charset = "utf-8")
     link(rel="stylesheet" href="./index.css")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no")
   body
     .app-container
-      .main-visual
-        h1 なんか
-      .cards-container
-        ul.cards
+      .app-navigation
+        ul
+          li トップ
+          li 店舗一覧
+          li ジャンル一覧
+      .app-header
+        .main-visual
+          .main-visual-image-container
+            img(src="./images/main_visual.jpg")
+          .main-visual-text-box
+            h1 酒蔵 山口
+            p すばらしき日本酒の旅を
+      .app-content
+        ul.cards-container
           - for (let index = 0; index < 30; index++) {
-            li.card
-              .card-header 商品名#{index}
-              .card-content
+            li.card-container
+              .card
+                .card-header
+                  img(src="http://getnavi.jp/wps/wp-content/uploads/2016/05/20160515-%EF%BD%936-0.jpg")
+                .card-content
+                  .card-content-product-name 商品名
+                  .card-content-product-description
+                    | 商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。商品説明。
+                  .card-content-product-price
+                    | 10,000
+                    .card-content-product-price-unit
+                      | 円
+                .card-footer
+                  .card-footer-rakuten-link
+                    | 楽天で購入
           - }
+        .pagination-container
+          ul.pagination
+            li.pagination-item 1
+            li.pagination-item.pagination-item__disbaled
+              | ...
+            li.pagination-item 3
+            li.pagination-item 4
+            li.pagination-item 5
+            li.pagination-item.pagination-item__disbaled
+              | ...
+            li.pagination-item 10
+      .app-footer
+        p 【免責事項】本サイトで掲載されている情報は、本サイト作成者により運営されています。 価格、販売可能情報は、変更される場合があります。購入時に楽天市場店舗（www.rakuten.co.jp）に表示されている価格が、その商品の販売に適用されます。
