--- a/src/index.sass
+++ b/src/index.sass
@@ -66,6 +66,7 @@ img
   .main-visual-image-container
     position: relative
     width: 100%
+    min-height: 260px
     max-height: 420px
     overflow: hidden
     &:after
