Create shops style

--- a/src/index.sass
+++ b/src/index.sass
@@ -253,3 +253,23 @@ img
       border-radius: 3px
       &:hover
         opacity: .3
+
+// shops
+.shop-list
+  $width-max: 880px
+  width: 100%
+  max-width: $width-max
+  margin: 0 auto
+  padding: 0 16px
+  li
+    border: solid 1px #ccc
+    & + li
+      border-top: none
+    a
+      padding: 4px
+      display: inline-block
+      width: 100%
+      text-decoration: none
+      color: inherit
+      &:hover
+        opacity: .8
