Create genres style

--- a/src/index.sass
+++ b/src/index.sass
@@ -261,11 +261,7 @@ img
   max-width: $width-max
   margin: 0 auto
   padding: 0 16px
-  li
-    border: solid 1px #ccc
-    & + li
-      border-top: none
-    a
+  li a
       padding: 4px
       display: inline-block
       width: 100%
@@ -273,3 +269,15 @@ img
       color: inherit
       &:hover
         opacity: .8
+
+// genres
+.genre-list
+  padding-left: 32px
+  a
+    padding: 4px
+    display: inline-block
+    width: 100%
+    text-decoration: none
+    color: inherit
+    &:hover
+      opacity: .8
