--- a/src/index.sass
+++ b/src/index.sass
@@ -3,7 +3,9 @@ body,
 div,
 ul,
 li,
-h1
+h1,
+a,
+img
   padding: 0
   margin: 0
   outline: 0
@@ -96,6 +98,24 @@ img
       font-family: serif
       font-size: 4rem
       border-bottom: solid 1px #fff
+
+.breadcrumb-list
+  display: inline-block
+  margin: 0 auto 12px
+  li
+    display: inline-block
+    height: 28px
+    line-height: 28px
+    & + li
+      &:before
+        display: inline-block
+        content: '>'
+        color: #9e9e9e
+        padding: 0 12px
+    a
+      text-decoration: none
+      color: #9e9e9e
+
 
 .cards-container
   display: flex
